--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Settings{% endblock %}
 
 {% block content %}
-  <h1>Dashboard</h1>
-  <p>Welcome to your dashboard. You can <a href="{% url "password_change" %}">change your password</a>.</p>
+  <h1>Settings</h1>
+  <p><a href="{% url "edit" %}">Edit your profile</a></p>
+  <p><a href="{% url "password_change" %}">Change your password</a></p>
 {% endblock %}
