--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -6,7 +6,7 @@ body {
     margin:0;
     padding:0;
     font-family:Arial, sans-serif;
-    color:#5f5f5f;
+    color:#979797;
     font-size:20px;
     
 
@@ -61,3 +61,84 @@ h2 {
     align-items: center;
 }
 
+#header ul.menu {
+    list-style:none;
+    float:left;
+    margin:0;
+    padding:0;
+}
+#header ul.menu li {
+    float:left;
+    padding:4px 10px;
+}
+
+#header ul.menu li.selected a, #header ul.menu li.selected a:hover {
+    color:#fdc7f9;
+    font-weight:bold;
+}
+
+#header a {
+    color:#ffffff;
+}
+#header a:hover {
+    color:rgb(200, 210, 255);
+}
+
+#header .user {
+    float:right;
+    padding-top:4px;
+}
+
+#content {
+    padding:30px 100px;
+}
+
+/* forms */
+form {
+    overflow:auto;
+}
+
+form p {
+    width:100%;
+    overflow:auto;
+}
+
+label {
+    float:left;
+    clear:both;
+    
+    margin-bottom:4px;
+    color:#5f5f5f;
+
+}
+input, textarea {
+    clear:both;
+    float:left;
+    margin:0 0 10px;
+    background:#d0e1ff;
+    border:0;
+    padding:6px 10px;
+    font-size:14px;
+}
+
+input[type=submit], a.button {
+    font-weight:bold;
+    background:#6690df;
+    color:#fff;
+    padding:10px 20px;
+    font-size:14px;
+    text-transform:uppercase;
+}
+.errorlist {
+    color:#c24967;
+    float:left;
+    clear:both;
+    padding-left:10px;
+}
+.helptext {
+    margin:0 0 20px 0;
+    color:#aaa;
+    clear:both;
+    float:left;
+    font-size:13px;
+}
