--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -10,7 +10,7 @@
       Please try again.
     </p>
   {% else %}
-    <p>If you don't have an account <a href="{% url "register" %}">register here.</a></p>
+    <p>If you don't have an account <a href="{% url 'register' %}">register here.</a></p>
   {% endif %}
   <div class="login-form">
     <form action="{% url 'login' %}" method="post">
@@ -19,7 +19,7 @@
       <input type="hidden" name="next" value="{{ next }}" />
       <p><input type="submit" value="Log-in"></p>
     </form>
-    <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+    <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
   </div>
   <div class="social">
     <ul>
