rework front-end

--- a/account/templates/account/my_issues.html
+++ b/account/templates/account/my_issues.html
@@ -5,6 +5,6 @@
 {% block content %}
   <h1>My issues</h1>
   
-  <p><a href="{% url "my_issues" %}">My issues</a></p>
+  <p><a href="{% url 'my_issues' %}">My issues</a></p>
 
 {% endblock %}
