--- a/account/templates/account/start.html
+++ b/account/templates/account/start.html
@@ -13,6 +13,6 @@
      despite the conditions and distance.</p>
 
 
-  <p><a href="{% url "ToBeTogether" %}">About Us</a></p>
+  <p><a href="{% url 'ToBeTogether' %}">About Us</a></p>
 
 {% endblock %}
