--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -13,12 +13,16 @@ body {
 }
 
 a {
-    color:#255fca;
+    color:#6690df;
     text-decoration:none;
+
 }
 
 a:hover {
-    color:#010db1;
+    font-weight: bold;
+    transition-property: all;
+    transition-duration: .4s;
+
 }
 
 h1, h2, h3, h4, h5 , h6 {
@@ -29,6 +33,7 @@ h1, h2, h3, h4, h5 , h6 {
     align-items: center;
     justify-content: space-around;
     color:#6690df;
+
 }
 
 h2 {
@@ -49,12 +54,13 @@ h2 {
     align-items: center;
 }
 
+
+
 #header .logo {
     font-family: 'Arial', sans-serif;
     float:left;
     color:#ffffff;
     font-size:25px;
-    
     overflow:auto;
     display: flex;
     justify-content: space-around;
@@ -75,18 +81,23 @@ h2 {
 #header ul.menu li.selected a, #header ul.menu li.selected a:hover {
     color:#fdc7f9;
     font-weight:bold;
+    transition-property: all;
+    transition-duration: .4s;
 }
 
 #header a {
     color:#ffffff;
 }
+
 #header a:hover {
-    color:rgb(200, 210, 255);
+    color:#fdc7f9;
+    font-weight: normal;
+    transition-property: all;
+    transition-duration: .4s;
 }
 
 #header .user {
     float:right;
-    padding-top:4px;
 }
 
 #content {
@@ -141,151 +152,4 @@ input[type=submit], a.button {
     clear:both;
     float:left;
     font-size:13px;
-}
-/* messages */
-ul.messages {
-    margin:10px 100px;
-    padding:0;
-    list-style-type:
-    none;
-}
-ul.messages li.success,
-ul.messages li.warning,
-ul.messages li.error,
-ul.messages li.info {
-    margin:0;
-    padding:14px 20px;
-    list-style:none;
-    color:#fff;
-}
-
-ul.messages li.success { background:#6690df; }
-ul.messages li.success a { color:#6690df; }
-
-ul.messages li.error { background:#db5b7b; color:#e9828e; }
-ul.messages li.error a { color:#e9828e; }
-
-ul.messages li.info { background:#faffae; color:#696b4e; }
-ul.messages li.info a { color:#1586de; }
-
-ul.messages li.warning { background:#de9404; }
-ul.messages li.warning a { color:#f49000; }
-
-ul.messages li a.close {
-    margin:0;
-    float:right;
-    opacity:1;
-    border:0;
-    box-shadow:none;
-    text-shadow:none;
-}
-
-.login-form {
-    float:left;
-}
-
-/* social-auth */
-.social {
-    float: right;
-}
-
-.social li {
-    list-style:none;
-    padding:10px 20px;
-    margin:0 0 10px 0;
-}
-
-.social li a {
-    width:100%;
-    height:100%;
-    display:block;
-    color:#fff;
-
-}
-.social li.facebook { background:#3b5399; }
-.social li.twitter { background:#00cffa; }
-
-
-/* images */
-
-.image-preview, .image-detail {
-    max-width:300px;
-    float:left;
-    margin:0 20px 20px 0;
-}
-.image-detail { margin-top:20px; }
-.image-info div {
-    padding:20px 0;
-    overflow:auto;
-}
-.count {
-    color:#aaa;
-    border:3px solid #bbb;
-    border-radius:26px;
-    padding:10px 20px;
-    margin:20px 10px 0;
-}
-a.like, a.follow { float:right; margin-top:-8px; }
-
-#image-list { overflow:auto; }
-#image-list .image {
-    float:left;
-    width:220px;
-    height:300px;
-    margin:0 10px 10px 10px;
-    border-top:8px solid #6690df;
-    background:#eee;
-}
-#image-list img { width:220px; height:220px; }
-#image-list .info { padding:10px; }
-#image-list .info a { color:#333; }
-.image-likes div {
-    float:left;
-    width:auto;
-    padding:10px;
-    text-align:center;
-}
-.image-likes img {
-    width:120px;
-    height:120px;
-    border-radius:50%;
-}
-
-/* users */
-#people-list img {
-    width:180px;
-    height:180px;
-    border-radius:50%;
-    margin-bottom:20px;
-}
-#people-list .user {
-    width:180px;
-    float:left;
-    overflow:auto;
-    padding:10px;
-}
-#people-list .info { text-align:center; }
-img.user-detail {
-    border-radius:50%;
-    float:left;
-}
-.profile-info {
-    float:left;
-    overflow:auto;
-    margin-right:20px;
-}
-.image-container { margin-top:40px; }
-
-/* actions */
-.action {
-    clear:both;
-    overflow:auto;
-}
-.action .images {
-    float:left;
-    margin:0 10px 10px 0;
-}
-.action .date {
-    font-style:italic;
-    color:#ccc;
 }
