--- a/account/templates/account/new_issues.html
+++ b/account/templates/account/new_issues.html
@@ -5,6 +5,6 @@
 {% block content %}
   <h1>New issues</h1>
   
-  <p><a href="{% url "new_issues" %}">My issues</a></p>
+  <p><a href="{% url 'new_issues' %}">List new issues</a></p>
 
 {% endblock %}
