--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -4,6 +4,6 @@
 
 {% block content %}
   <h1>Settings</h1>
-  <p><a href="{% url "edit" %}">Edit your profile</a></p>
-  <p><a href="{% url "password_change" %}">Change your password</a></p>
+  <p><a href="{% url 'edit' %}">Edit your profile</a></p>
+  <p><a href="{% url 'password_change' %}">Change your password</a></p>
 {% endblock %}
