--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -11,29 +11,29 @@
   <div id="header">
     <span class="logo">
       <img src="{% static '/img/logo_tbt.png' %}" width="50" height="50">
-      <a href="{% url "ToBeTogether" %}">ToBeTogether</a>
+      <a href="{% url 'ToBeTogether' %}">ToBeTogether</a>
     </span>
     {% if request.user.is_authenticated %}
       <ul class="menu">
-        <li {% if section == "My issues" %}class="selected"{% endif %}>
-          <a href="{% url "my_issues" %}">My issues</a>
+        <li {% if section == 'my_issues' %}class="selected"{% endif %}>
+          <a href="{% url 'my_issues' %}">My issues</a>
         </li>
-        <li {% if section == "New issues" %}class="selected"{% endif %}>
-          <a href="{% url "new_issues" %}">New issues</a>
+        <li {% if section == 'new_issues' %}class="selected"{% endif %}>
+          <a href="{% url 'new_issues' %}">New issues</a>
         </li>
-        <li {% if section == "My profile" %}class="selected"{% endif %}>
-          <a href="{% url "my_profile" %}">My profile</a>
+        <li {% if section == "my_profile" %}class="selected"{% endif %}>
+          <a href="{% url 'my_profile' %}">My profile</a>
         </li>
-        <li {% if section == "settings" %}class="selected"{% endif %}>
-          <a href="{% url "settings" %}">Settings</a>
+        <li {% if section == 'settings' %}class="selected"{% endif %}>
+          <a href="{% url 'settings' %}">Settings</a>
         </li>
       </ul>
     {% endif %}
     <span class="user">
       {% if request.user.is_authenticated %}
-        <a href="{% url "logout" %}">Logout</a>
+        <a href="{% url 'logout' %}">Logout</a>
       {% else %}
-        <a href="{% url "login" %}">Log-in</a>
+        <a href="{% url 'login' %}">Log-in</a>
       {% endif %}
     </span>
   </div>
