delete photo, first name, last name

--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit your account{% endblock %}
+{% block title %}TBT - Edit your account{% endblock %}
 
 {% block content %}
   <h1>Edit your account</h1>
