--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Settings{% endblock %}
+{% block title %}TBT - Settings{% endblock %}
 
 {% block content %}
   <h1>Settings</h1>
