--- a/account/templates/account/start.html
+++ b/account/templates/account/start.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My issues{% endblock %}
+{% block title %}ToBeTogether{% endblock %}
 
 {% block content %}
 
