--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}TBT - Log-in{% endblock %}
 
 {% block content %}
   <h1>Log-in</h1>
