--- a/account/templates/account/new_issues.html
+++ b/account/templates/account/new_issues.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}New issues{% endblock %}
+{% block title %}TBT - New issues{% endblock %}
 
 {% block content %}
   <h1>New issues</h1>
   
+  <p><a href="{% url 'new_issues' %}">Create an issue</a></p>
   <p><a href="{% url 'new_issues' %}">List new issues</a></p>
 
 {% endblock %}
