--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}TBT - Logged out{% endblock %}
 
 {% block content %}
   <h1>Logged out</h1>
