--- a/account/templates/registration/password_change_done.html
+++ b/account/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Password changed{% endblock %}
+{% block title %}TBT - Password changed{% endblock %}
 
 {% block content %}
   <h1>Password changed</h1>
