--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Change you password{% endblock %}
+{% block title %}TBT - Change password{% endblock %}
 
 {% block content %}
   <h1>Change you password</h1>
