--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Password reset{% endblock %}
+{% block title %}TBT - Password reset{% endblock %}
 
 {% block content %}
   <h1>Password set</h1>
