--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}TBT - Reset password{% endblock %}
 
 {% block content %}
   <h1>Reset your password</h1>
