add integrate issue

--- a/templates/account/my_issues.html
+++ b/templates/account/my_issues.html
@@ -5,7 +5,7 @@
 {% block content %}
   <h1>My issues</h1>
 
-  <p><a href="{% url 'new_issues' %}">Create an issue</a></p>
+  <p><a href="{% url 'create_issue' %}">Create an issue</a></p>
   <p><a href="{% url 'my_issues' %}">List my issues</a></p>
 
 
