--- a/templates/issue/detai.html
+++ b/templates/issue/detai.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <h2>{{issue.issue_title}}</h2>
-<p>{{}issue.issue_description}</p>
+<p>{{issue.issue_description}}</p>
 <em>{{issue.pub_date}}</em>
 
 <hr>
