--- a/templates/account/edit.html
+++ b/templates/account/edit.html
@@ -7,7 +7,7 @@
   <p>You can edit your account:</p>
   <form action="." method="post" enctype="multipart/form-data">
     {{ user_form.as_p }}
-    {{ profile_form.as_p }}
+    <!-- {{ profile_form.as_p }} -->
     {% csrf_token %}
     <p><input type="submit" value="Save changes"></p>
   </form>
