--- a/templates/account/new_issues.html
+++ b/templates/account/new_issues.html
@@ -5,7 +5,7 @@
 {% block content %}
   <h1>New issues</h1>
   
-  <p><a href="{% url 'new_issues' %}">Create an issue</a></p>
+  <p><a href="{% url 'create_issue' %}">Create an issue</a></p>
   <p><a href="{% url 'new_issues' %}">List new issues</a></p>
 
 {% endblock %}
