--- a/templates/issue/list_issues.html
+++ b/templates/issue/list_issues.html
@@ -7,7 +7,7 @@
     {% if latest_issues_list %}
 
         {% for a in latest_issues_list %}
-            <a href="{% url 'issue:detail' a.id %}">{{a.issue_title}}</a>
+            <a href="{% url 'detail' a.id %}">{{a.issue_title}}</a>
         {% endfor %}
 
     {% else %}
