--- a/templates/issue/detail.html
+++ b/templates/issue/detail.html
@@ -25,13 +25,10 @@ Write your first comment, please.
 
 <hr>
 
-<form action="{% url 'issue:leave_comment' issue.id %}" method="POST">
+<form action="{% url 'leave_comment' issue.id %}" method="POST">
 
     {% csrf_token %}
-
-    <input type="text" required placeholder="Name" name="name"><br>
-    <textarea name="text" required="" placeholder="Comment text" cols="100" rows="10"></textarea><br>
-загрузка файла
+    {{ form.as_p }}
 
     <button type="submit">Submit</button>
 </form>
