--- a/templates/account/new_issues.html
+++ b/templates/account/new_issues.html
@@ -3,9 +3,23 @@
 {% block title %}TBT - New issues{% endblock %}
 
 {% block content %}
+
   <h1>New issues</h1>
   
   <p><a href="{% url 'create_issue' %}">Create an issue</a></p>
-  <p><a href="{% url 'new_issues' %}">List new issues</a></p>
+
+  {% if latest_issues_list %}
+
+    {% for a in latest_issues_list %}
+      <div class="list_issues">
+        <a href="{% url 'detail' a.id %}">{{a.issue_title}}</a>
+      </div>
+    {% endfor %}
+
+  {% else %}
+
+    Issues not found
+
+  {% endif %}
 
 {% endblock %}
