--- a/templates/issue/list_issues.html
+++ b/templates/issue/list_issues.html
@@ -7,7 +7,9 @@
     {% if latest_issues_list %}
 
         {% for a in latest_issues_list %}
-            <a href="{% url 'detail' a.id %}">{{a.issue_title}}</a>
+            <div class="list_issues">
+                <a href="{% url 'detail' a.id %}">{{a.issue_title}}</a>
+            </div>
         {% endfor %}
 
     {% else %}
