--- a/templates/issue/search.html
+++ b/templates/issue/search.html
@@ -13,16 +13,18 @@
   </form>
 
 
-  {% if latest_issues_list %}
-    {% for a in latest_issues_list %}
+  {% if search_issues %}
+    {% for a in search_issues %}
       <div class="list_issues">
-        <a href="{% url 'detail' a.id %}">{{a.issue_title}}</a>
+        <a href="{% url 'detail' a.id%}">{{a.issue_title}}</a>
       </div>
     {% endfor %}
 
-    {% else %}
-      Issues not found
-    {% endif %}
+  {% else %}
+    Issues not found
+  {% endif %}
+
+
 
 
 {% endblock %}
