--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}TBT - Change password{% endblock %}
+{% block title %}TBT - Change your password{% endblock %}
 
 {% block content %}
-  <h1>Change you password</h1>
+  <h1>Change your password</h1>
   <p>Use the form below to change your password.</p>
   <form action="." method="post">
     {{ form.as_p }}
