--- a/templates/account/new_issues.html
+++ b/templates/account/new_issues.html
@@ -21,7 +21,9 @@
     {% endfor %}
 
     {% else %}
-      Issues not found
+      <div class="issues_not_found">
+        Issues not found
+      </div>
     {% endif %}
 
 
