--- a/templates/account/my_issues.html
+++ b/templates/account/my_issues.html
@@ -17,9 +17,9 @@
       {% endfor %}
 
     {% else %}
-
-      Issues not found
-
+      <div class="issues_not_found">
+        Issues not found
+      </div>
     {% endif %}
 
 {% endblock %}
