--- a/templates/account/my_profile.html
+++ b/templates/account/my_profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>My profile</h1>
-  <p id="create_issue"><a href="{% url 'create_issue' %}">Create an issue</a></p>
+  <p><a href="{% url 'create_issue' %}">Create an issue</a></p>
   <p><a href="{% url 'my_issues' %}">List my issues</a></p>
   <p><a href="{% url 'new_issues' %}">List new issues</a></p>
 
