--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,6 +3,7 @@
 {% block title %}TBT - Reset password{% endblock %}
 
 {% block content %}
+
   <h1>Reset your password</h1>
   {% if validlink %}
     <p>Please enter your new password twice:</p>
@@ -12,6 +13,8 @@
       <p><input type="submit" value="Change my password" /></p>
     </form>
   {% else %}
-    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+    <p>The password reset link was invalid, possibly because it has already been used.
+        Please request a new password reset.</p>
   {% endif %}
+
 {% endblock %}
