--- a/templates/account/start.html
+++ b/templates/account/start.html
@@ -8,9 +8,8 @@
   
   <p>ToBeTogether is a social project that is designed for private mutual 
     assistance to each other in various situations.</p>
-  <p>Today, circumstances make us separated from each other.</p>
-  <p>But I am sure that we can be together and will be able to help each other 
-     despite the conditions and distance.</p>
+  <p>This project allows you to anonymously ask the most unimaginable questions and receive an anonymous answer to them.</p>
+  <p>On this site, you should not worry about public condemnation.</p>
 
   <p><a href="{% url 'ToBeTogether' %}">About Us</a></p>
 
